--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,14 +9,39 @@
 
 /*---------------HEADER---------------*/
 
-header /*Fondo header*/
+header nav
 {
-    background-color: rgb(250, 166, 50); 
-    padding: 20px;
-    width: 100%;
-    display: flex;
-    justify-content:left;
-    align-items: center;
+    background-color: rgb(250, 166, 50);
+    transition: 0.3s;
+}
+
+.opc li
+{
+    transition: 0.3s;
+    margin-right: 50px;
+}
+
+.opc li:hover
+{
+    transform: scale(1.1);
+}
+
+.buscar /*Boton buscar nav*/
+{
+    text-decoration: none;
+    background-color:rgb(250, 166, 50);
+    color: black;
+    font-family: var(--bs-font-sans-serif);
+    font-size: medium;
+    padding: 5px;
+    font-weight: 500;
+    border: none;
+    transition: 0.3s;
+}
+
+.buscar:hover /*Hover buscar nav*/
+{
+    transform: scale(1.05);
 }
 
 .logo img /*Logo*/
@@ -24,6 +49,7 @@ header /*Fondo header*/
     width: 80px;
     height: 80px;
     margin: 20px;
+    margin-right: 50px;
 }
 
 .titulo /*ID Titulo*/
@@ -36,44 +62,21 @@ header /*Fondo header*/
     letter-spacing: 10px;/*Espacio entre letras*/
     line-height: 100px; /*Separa entre linea y linea*/
     text-align: center; /*posicion del texto*/
+    background-color: rgba(0, 0, 0, 0.574);
+    margin: 0;
+}
+
+.titulo2 /*ID Titulo pages != index*/
+{
+    color: rgb(253, 253, 253); /*Color*/
+    font-size: 50px; /*Tamano de letra*/
+    font-weight: 500px; /*Negrita*/
+    font-style:normal; /*Estilo de letra*/
+    font-family: 'Rubik', sans-serif; /*Tipografia*/
+    letter-spacing: 10px;/*Espacio entre letras*/
+    line-height: 100px; /*Separa entre linea y linea*/
+    text-align: center; /*posicion del texto*/
     background-color: rgba(56, 56, 56, 0.882);
-}
-
-#subtitulo /*ID Subtitulo*/
-{
-    color: white;
-    font-size: 25px; 
-    font-family: 'Rubik', sans-serif; 
-    letter-spacing: 6px;
-    text-align: center;
-    background-color: rgba(56, 56, 56, 0.882);
-}
-
-header nav ul li a /*Enlaces lista Menu*/
-{
-    text-decoration:none;/*Decoracion en la letra*/
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-    font-weight: 900;
-}
-
-header nav ul /*Lista Menu*/
-{
-    list-style:none; /*Estilo de lista (el punto)*/
-    display: flex;
-    
-}
-
-header nav ul li /*Opciones Menu*/
-{
-    margin: 25px;
-    margin-bottom: 30px;
-    transition: 0.3s;
-}
-
-.boton:hover /*Hover nav*/
-{
-    transform:scale(1.1);
 }
 
 /*---------------MAIN---------------*/
@@ -86,17 +89,6 @@ body /*Tipo fuente body*/
 main /*Fondo del main*/
 {
     background-color: rgba(56, 56, 56, 0.882);
-}
-
-.hero/*class*//*Banner*/
-{
-    width: 100%;
-    height: 45vh;
-    background-image: url("../img/banner.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
 }
 
 .loMasVendido /*Seccion lo mas vendido*/
@@ -122,8 +114,8 @@ main /*Fondo del main*/
 
 .loMasVendido div div /*Box lo mas vendido*/
 {
-    width: 300px;
-    height: 500px;
+    width: 40vh;
+    height: 70vh;
     border: 4px solid rgb(0, 0, 0); /*Para crear el borde de la caja*/
     margin: 30px;
     text-align: center;
@@ -132,6 +124,7 @@ main /*Fondo del main*/
     color: white;
     letter-spacing: 2px;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .loMasVendido div div a /*Boton lo mas vendido*/
@@ -144,6 +137,7 @@ main /*Fondo del main*/
     border: 2px solid rgb(0, 0, 0);
     border: 3px solid rgba(56, 56, 56, 0.882);
     transition: 0.3s;
+    margin-bottom: 8px;
 }
 
 .loMasVendido div div a:hover  /*Hover botones lo mas vendido*/
@@ -156,8 +150,8 @@ main /*Fondo del main*/
 
 .loMasVendido div div img /*Img lo mas vendido*/
 {
-    width:301px ;
-    height:402px ;
+    width: 100%;
+    height:80% ;
     border-bottom: 4px solid black;
 }
 
@@ -179,6 +173,7 @@ main /*Fondo del main*/
     background-color: rgb(255, 136, 0);
     font-size: 21px;
     border: 3px solid rgba(0, 0, 0, 0.882);
+    color: black;
 }
 
 .ofertas /* seccion ofertas*/
@@ -190,7 +185,7 @@ main /*Fondo del main*/
 {
     margin-top: 25px;
     color: black;
-    background-color:  rgb(250, 166, 50);;
+    background-color:  rgb(250, 166, 50);
     padding: 4px;
 }
 
@@ -199,13 +194,13 @@ main /*Fondo del main*/
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .ofertas div div /*Box ofertas*/
 {
-    width: 400px;
-    height: 355px;
+    width: 55vh;
+    height: 55vh;
     border: 4px solid rgb(0, 0, 0);
     margin: 30px;
     text-align: center;
@@ -214,12 +209,14 @@ main /*Fondo del main*/
     color: white;
     letter-spacing: 2px;
     flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .ofertas div div img /*Img ofertas*/
 {
-    width:401px ;
-    height:252px ;
+    width:100% ;
+    height:70%;
     border-bottom: 4px solid black;
 }
 
@@ -232,6 +229,7 @@ main /*Fondo del main*/
     border: 2px solid rgb(0, 0, 0);
     border: 3px solid rgba(56, 56, 56, 0.882);
     transition: 0.3s;
+    margin-bottom: 10px;
 }
 
 .ofertas div div a:hover/*Hover boton ofertas*/
@@ -254,6 +252,14 @@ main /*Fondo del main*/
     background-color:  rgb(250, 166, 50);;
     padding: 4px;
 }
+
+.categorias div /*Flex categorias productos*/
+{
+    display: flex;
+    justify-content:space-evenly;
+    flex-wrap: wrap;
+}
+
 .categorias div div  /*Disposicion categorias*/
 {
     display:inline-block;
@@ -313,6 +319,11 @@ footer div ul /*Lista footer*/
     bottom: 15px;
 }
 
+footer .logo /*Logo footer*/
+{
+    margin-left: 30px;
+}
+
 /*---------------CONTACTO---------------*/
 
 /*---------------MAIN---------------*/
@@ -320,7 +331,7 @@ footer div ul /*Lista footer*/
 .hero2/*Banner No index*/
 { 
     width: 100%;
-    height: 13.3vh;
+    height: 13.5vh;
     background-image: url("../img/banner.jpg");
     background-position: center;
     background-size: cover;
@@ -328,33 +339,37 @@ footer div ul /*Lista footer*/
     background-attachment: fixed;
 }
 
-.informacion form
+.informacion /*Campo Form*/
 {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: wrap;
+    width: 90%;
 }
 
-.informacion form div /*Form*/
+.informacion form div:nth-child(1) /*Primer hijo del form*/
 {
-    margin: 10px 5px 10px 5px;
-    color: black;
-    background-color: rgb(141, 141, 141);
+    padding-top: 40px;
+}
+
+.informacion form div:nth-child(2) /*Segundo hijo del form*/
+{
+    padding-top: 40px;
+}
+
+.informacion form div label /*Texto form*/
+{
+    background-color: rgba(222, 222, 222, 0.884);
     padding: 5px;
 }
 
-.input /*Botones del form*/
+.informacion form div:nth-child(8) /*Ultimo hijo del form*/
 {
-    margin: 0px 0px 10px 10px;
-    padding: 4px;
-    font-size: 15px;
+    padding-bottom:40px;
 }
 
-.botonesContacto input
+.informacion form div /*Hijos Form*/
 {
-    margin: 0 10px 0 10px;
+    padding-left: 100px;
 }
+
 
 /*---------------PRODUCTOS---------------*/
 
@@ -384,8 +399,8 @@ footer div ul /*Lista footer*/
 
 .boxProductos div div div /*Box productos*/
 {
-    width: 400px;
-    height: 355px;
+    width: 55vh;
+    height: 55vh;
     border: 4px solid rgb(0, 0, 0);
     margin: 30px;
     text-align: center;
@@ -394,25 +409,27 @@ footer div ul /*Lista footer*/
     color: white;
     letter-spacing: 2px;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .boxProductos div div div img /*Img page producto*/
 {
-    width:401px ;
-    height:252px ;
+    width:100% ;
+    height:70% ;
     border-bottom: 4px solid black;
 }
 
-.boxProductos div div div a /*Botones Ofertas*/
+.boxProductos div div div a 
 {
     text-decoration: none;
     background-color: rgb(250, 166, 50);
     color: black;
-    padding: 4px;  
+    padding-left: 5px;
+    padding-right: 5px;
     border: 2px solid rgb(0, 0, 0);
     border: 3px solid rgba(56, 56, 56, 0.882);
     transition: 0.3s;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .boxProductos div div div a:hover/*Hover boton ofertas*/
@@ -435,7 +452,7 @@ footer div ul /*Lista footer*/
     padding: 4px;
 }
 
-.categoriasProductos div  /*Disposicion categorias*/
+.categoriasProductos div  /*Disposicion categorias productos*/
 {
     display:inline-block;
     margin: 20px;
@@ -471,8 +488,8 @@ footer div ul /*Lista footer*/
 
 .categoriasProductos div /*Box categorias productos*/
 {
-    width: 200px;
-    height: 30px;
+    width: auto;
+    height: auto;
     border: 4px solid rgb(250, 166, 50);
     margin: 10px;
     text-align: center;
@@ -497,8 +514,8 @@ footer div ul /*Lista footer*/
 
 .servicio div div /*Box servicios*/
 {
-    width: 400px;
-    height: 40px;
+    width: 25%;
+    height: auto;
     border: 4px solid black;
     margin: 30px;
     line-height: 37px;
@@ -534,7 +551,7 @@ footer div ul /*Lista footer*/
 
 .gridContainer /*Grilla main nosotros*/
 {
-    width: 80%;
+    width: 100%;
     padding: 40px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -596,8 +613,8 @@ footer div ul /*Lista footer*/
 
 .party1 img /*Ajustes imagen nosotros*/
 {
-    width: 300px;
-    height: 200px;
+    width: 40vh;
+    height: 30vh;
     margin: 20px;
     background-color: rgb(0, 0, 0);
     padding: 5px;
@@ -605,8 +622,8 @@ footer div ul /*Lista footer*/
 
 .party2 img /*Ajustes imagen nosotros*/
 {
-    width: 300px;
-    height: 200px;
+    width: 40vh;
+    height: 30vh;
     margin: 20px;
     background-color: rgb(0, 0, 0);
     padding: 5px;
@@ -614,8 +631,8 @@ footer div ul /*Lista footer*/
 
 .party3 img /*Ajustes imagen nosotros*/
 {
-    width: 300px;
-    height: 200px;
+    width: 40vh;
+    height: 30vh;
     margin: 20px;
     background-color: rgb(0, 0, 0);
     padding: 5px;
@@ -623,8 +640,8 @@ footer div ul /*Lista footer*/
 
 .party4 img /*Ajustes imagen nosotros*/
 {
-    width: 300px;
-    height: 200px;
+    width: 40vh;
+    height: 30vh;
     margin: 20px;
     background-color: rgb(0, 0, 0);
     padding: 5px;
@@ -639,8 +656,8 @@ footer div ul /*Lista footer*/
 {
     header
     {
-        flex-direction: column;
         padding: 0;
+
     }
 }
 
@@ -672,85 +689,45 @@ footer div ul /*Lista footer*/
 
 @media screen and (max-width:470px) /*Responsive box ofertas*/
 {
+    .ofertas div
+    {
+        justify-content: center;
+    }
+
     .ofertas div div /*Box ofertas*/
     {
-        width: 300px;
-        height: 500px;
-        border: 4px solid rgb(0, 0, 0);
-        margin: 30px;
-        text-align: center;
-        line-height: 37px;
-        background-color: rgb(0, 0, 0);
-        display:inline-block;
-        color: white;
-        letter-spacing: 2px;
+        width: 40vh;
+        height: 75vh;
+        
     }
 
     .ofertas div div img /*Img ofertas*/
     {
-        width:301px ;
-        height:402px ;
-        border-bottom: 4px solid black;
+        width: 100%;
+        height:80% ;
         object-fit: cover;
-    }
-
-    .ofertas div div a /*Botones Ofertas*/
-    {
-        text-decoration: none;
-        background-color: rgb(250, 166, 50);
-        color: black;
-        padding: 4px;  
-        border: 2px solid rgb(0, 0, 0);
-        border: 3px solid rgba(56, 56, 56, 0.882);
     }
 }
 
+@media screen and (max-width:1060px) /*Responsive boxes index*/
+{
+    .loMasVendido div div
+    {
+        height: 75vh;
+    }
+
+    .loMasVendido div div img
+    {
+        height: 75%;
+        object-fit: cover;
+
+    }
+}
+
+
+
 @media screen and (max-width:390px) /*Responsive boxes index*/
 {
-    .ofertas div div /*Box ofertas*/
-    {
-        width: 250px;
-        height: 450px;
-        border: 4px solid rgb(0, 0, 0);
-        margin: 30px;
-        text-align: center;
-        line-height: 37px;
-        background-color: rgb(0, 0, 0);
-        display:inline-block;
-        color: white;
-        letter-spacing: 2px;
-    }
-
-    .ofertas div div img /*Img ofertas*/
-    {
-        width:251px ;
-        height:352px ;
-        border-bottom: 4px solid black;
-        object-fit: cover;
-    }
-
-    .loMasVendido div div /*Box lo mas vendido*/
-    {
-        width: 250px;
-        height: 450px;
-        border: 4px solid rgb(0, 0, 0); /*Para crear el borde de la caja*/
-        margin: 30px;
-        text-align: center;
-        line-height: 37px;
-        background-color: rgb(0, 0, 0);
-        display:inline-block;
-        color: white;
-        letter-spacing: 2px;
-    }
-
-    .loMasVendido div div img /*Img lo mas vendido*/
-    {
-        width:251px ;
-        height:352px ;
-        border-bottom: 4px solid black;
-        object-fit: cover;
-    }
-
     .categorias div div img /*Img categorias*/
     {
         width: 120px;
@@ -770,7 +747,7 @@ footer div ul /*Lista footer*/
     }
 }
 
-@media screen and (max-width:1200px) /*Responsive main nosotros*/
+@media screen and (max-width:1300px) /*Responsive main nosotros*/
 {
     .gridContainer
     {
@@ -809,76 +786,53 @@ footer div ul /*Lista footer*/
         width: 200px;
         height: 200px;
     }
-    .party1 img
-    {
-        width: 240px;
-        height: 140px;
-    }
-
-    .party2 img
-    {
-        width: 240px;
-        height: 140px;
-    }
     
-    .party3 img
-    {
-        width: 240px;
-        height: 140px;
-    }
-
-    .party4 img
-    {
-        width: 240px;
-        height: 140px;
-    }
 }
 
-@media screen and (max-width:465px) /*Responsive page productos*/
+@media screen and (max-width:560px) /*Responsive page productos*/
 {
+    .boxProductos div div
+    {
+        justify-content: center;
+    }
+
     .boxProductos div div div
     {
-        width: 350px;
-        height: 305px;
+        width: 40vh;
+        height: 60vh;
+        
     }
 
-    .boxProductos div div div img 
+    .boxProductos div div div img
     {
-        width:351px ;
-        height:202px ;
-    }
-
-    .categoriasProductos div 
-    {
-        display:inline-block;
-        margin: 23px 30px 0px 30px;
-    }
-}
-
-@media screen and (max-width:465px) /*Responsive page productos*/
-{
-    .boxProductos div div div
-    {
-        width: 250px;
-        height: 405px;
-    }
-
-    .boxProductos div div div img 
-    {
-        width:251px ;
-        height:302px ;
+        width: 100%;
+        height:75% ;
         object-fit: cover;
     }
-
-    .titulo
-    {
-        font-size: 40px;
-    }
-
-    #subtitulo /*ID Subtitulo*/
-    {
-        font-size: 20px; 
-    } 
 }
 
+@media screen and (max-width:500px)  /*Desaparece banner index*/
+{
+    .banner
+    {
+        display: none;
+    }
+}
 
+@media screen and (min-width: 501px) /*Desaparece imagen banner index*/
+{
+    .banner2 div img
+    {
+        display: none;
+    }
+}
+
+@media screen and (max-width:501px) /*Aparece imagen banner index*/
+{
+    .banner2 div img
+    {
+        width: 100%;
+        height: 30vh;
+        object-fit: cover;
+    }
+}
