--- a/SCSS/base/_variables.scss
+++ b/SCSS/base/_variables.scss
@@ -1,2 +1,8 @@
-$colorNaranjado: rgb(250, 166, 50);
-$colorGris: rgba(56, 56, 56, 0.882);
+//* LISTA COLORES
+
+$colores:
+rgb(250, 166, 50), //*Color principal
+rgba(56, 56, 56, 0.882), //*Color fondo
+rgb(255, 136, 0), //*Color principal hover
+black, //*Color negro
+white; //*Color blanco
