--- a/SCSS/components/_main.scss
+++ b/SCSS/components/_main.scss
@@ -1,13 +1,16 @@
 @import "../base/variables";
+@import "../base/maps";
+@import "../base/extends";
+@import "../base/mixins";
 
 /*---------------INDEX---------------*/
 
 main
 {
-    background-color: rgba(56, 56, 56, 0.882);
+    background-color: nth($colores , 2 );
     .titulo /*ID Titulo*/
     {
-        color: rgb(253, 253, 253); /*Color*/
+        color: nth($colores , 5 ); /*Color*/
         font-size: 50px; /*Tamano de letra*/
         font-weight: 500px; /*Negrita*/
         font-style:normal; /*Estilo de letra*/
@@ -24,52 +27,43 @@ main
         h2 /*Lo mas vendido titulo*/
         {
             margin-top: 25px;
-            color: black;
-            background-color:  rgb(250, 166, 50);;
+            color: nth($colores , 4 );
+            background-color:  nth($colores , 1 );
             padding: 4px;
         }
         div /*Flex section lo mas vendido*/
         {
-            display: flex;
-            align-items: center;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
+            @include flex (flex, space-evenly, center, wrap);
             div /*Box lo mas vendido*/
             {
-                width: 40vh;
-                height: 70vh;
-                border: 4px solid rgb(0, 0, 0); /*Para crear el borde de la caja*/
-                margin: 30px;
-                text-align: center;
-                line-height: 37px;
-                background-color: rgb(0, 0, 0);
+                @include basic (40vh, 70vh, 30px, auto, 4px solid nth($colores , 4 ), auto);
+                background-color: nth($colores , 4 );
                 color: white;
                 letter-spacing: 2px;
                 flex-direction: column;
                 justify-content: space-between;
                 a /*Boton lo mas vendido*/
                 {
-                    text-decoration: none;
-                    background-color: rgb(250, 166, 50);
-                    width: 50%;
-                    color: black;
-                    padding: 4px; 
-                    border: 2px solid rgb(0, 0, 0);
-                    border: 3px solid rgba(56, 56, 56, 0.882);
-                    transition: 0.3s;
-                    margin-bottom: 8px;
+                    text-decoration: map-get($botonCajasAngostas , decoracion );
+                    background-color: map-get($botonCajasAngostas , bg-color );
+                    width: map-get($botonCajasAngostas , width );
+                    color: nth($colores , 4 );
+                    padding: map-get($botonCajasAngostas , paddingh); 
+                    border: map-get($botonCajasAngostas , border );
+                    transition: map-get($botonCajasAngostas , transition );
+                    margin-bottom: map-get($botonCajasAngostas , margin-bottom );
                     &:hover  /*Hover botones lo mas vendido*/
                     {
-                        background-color: rgb(255, 136, 0);
+                        background-color: nth($colores , 3 );
                         font-size: 17px;
-                        border: 3px solid rgba(47, 47, 47, 0.882);
+                        border: 3px solid nth($colores , 2 );
                     }
                 }
                 img /*Img lo mas vendido*/
                 {
                     width: 100%;
                     height:80% ;
-                    border-bottom: 4px solid black;
+                    border-bottom: 4px solid nth($colores , 4 );
                 }
             }
         }
@@ -77,8 +71,8 @@ main
     .verMas /*Botn ver mas*/
     {
         text-decoration: none;
-        background-color: rgb(250, 166, 50);
-        color: black;
+        background-color: nth($colores , 1 );
+        color: nth($colores , 4 );
         padding: 4px;  
         line-height: 50px;
         font-size: 20px;
@@ -87,10 +81,10 @@ main
         transition: 0.3s;
         &:hover /*Hover ver mas*/
         {
-            background-color: rgb(255, 136, 0);
+            background-color: nth($colores , 3 );
             font-size: 21px;
-            border: 3px solid rgba(0, 0, 0, 0.882);
-            color: black;
+            border: 3px solid nth($colores , 4 );
+            color: nth($colores , 4 );
         }
     }
     .ofertas /*Seccion ofertas*/
@@ -99,26 +93,18 @@ main
         h2/*Titulo ofertas*/
         {
             margin-top: 25px;
-            color: black;
-            background-color:  rgb(250, 166, 50);
+            color: nth($colores , 4 );
+            background-color:  nth($colores , 1 );
             padding: 4px;
         }
         div/*Flex section ofertas*/
         {
-            display: flex;
-            align-items: center;
-            flex-wrap: wrap;
-            justify-content: center;
+            @extend %flex;
             div /*Box ofertas*/
             {
-                width: 55vh;
-                height: 55vh;
-                border: 4px solid rgb(0, 0, 0);
-                margin: 30px;
-                text-align: center;
-                line-height: 37px;
-                background-color: rgb(0, 0, 0);
-                color: white;
+                @include basic (55vh, 55vh, 30px, auto, 4px solid nth($colores , 4 ), auto);
+                background-color: nth($colores , 4 );
+                color: nth($colores , 5 );
                 letter-spacing: 2px;
                 flex-direction: column;
                 flex-wrap: wrap;
@@ -127,23 +113,22 @@ main
                 {
                     width:100% ;
                     height:70%;
-                    border-bottom: 4px solid black;
+                    border-bottom: 4px solid nth($colores , 4 );
                 }
                 a /*Botones Ofertas*/
                 {
-                    text-decoration: none;
-                    background-color: rgb(250, 166, 50);
-                    color: black;
-                    padding: 4px;  
-                    border: 2px solid rgb(0, 0, 0);
-                    border: 3px solid rgba(56, 56, 56, 0.882);
-                    transition: 0.3s;
-                    margin-bottom: 10px;
+                    text-decoration: map-get($botonCajasAnchas , decoracion );
+                    background-color: map-get($botonCajasAnchas , bg-color );
+                    color: map-get($botonCajasAnchas , color );
+                    padding: map-get($botonCajasAnchas , padding ); 
+                    border: map-get($botonCajasAnchas , border );
+                    transition: map-get($botonCajasAnchas , transition );
+                    margin-bottom: map-get($botonCajasAnchas , margin-bottom );
                     &:hover/*Hover boton ofertas*/
                     {
-                        background-color: rgb(255, 136, 0);
+                        background-color: nth($colores , 3 );
                         font-size: 17px;
-                        border: 3px solid rgba(47, 47, 47, 0.882);
+                        border: 3px solid nth($colores , 2 );
                     }
                 }
             }
@@ -155,15 +140,13 @@ main
         h2 /*Titulo categorias*/
         {
             margin-top: 25px;
-            color: black;
-            background-color:  rgb(250, 166, 50);;
+            color: nth($colores , 4 );
+            background-color:  nth($colores , 1 );
             padding: 4px;
         }
         div /*Flex categorias productos*/
         {
-            display: flex;
-            justify-content:space-evenly;
-            flex-wrap: wrap;
+            @include flex(flex, space-evenly, center, wrap);
             div  /*Disposicion categorias*/
             {
                 display:inline-block;
@@ -182,6 +165,7 @@ main
                 {
                     margin: 10px;
                     letter-spacing: 2px;
+                    color: nth($colores , 4 );
                 }
             }
         }
@@ -194,7 +178,7 @@ main
 {
     .titulo2 /*ID Titulo pages != index*/
     {
-        color: rgb(253, 253, 253); /*Color*/
+        color: nth($colores , 5 ); /*Color*/
         font-size: 50px; /*Tamano de letra*/
         font-weight: 500px; /*Negrita*/
         font-style:normal; /*Estilo de letra*/
@@ -202,7 +186,7 @@ main
         letter-spacing: 10px;/*Espacio entre letras*/
         line-height: 100px; /*Separa entre linea y linea*/
         text-align: center; /*posicion del texto*/
-        background-color: rgba(56, 56, 56, 0.882);
+        background-color: nth($colores , 2 );
     }
     .hero2/*Banner No index*/
     { 
@@ -254,28 +238,20 @@ main
         h2/*Titulo secciones productos*/
         {
             margin-top: 25px;
-            color: black;
-            background-color:  rgb(250, 166, 50);;
+            color: nth($colores , 4 );
+            background-color:  nth($colores , 1 );
             padding: 4px;
         }
         div
         {
             div /*Flex page productos*/
             {
-                display: flex;
-                align-items: center;
-                flex-wrap: wrap;
-                justify-content: space-evenly;
+                @include flex (flex, space-evenly, center, wrap);
                 div /*Box productos*/
                 {
-                    width: 55vh;
-                    height: 55vh;
-                    border: 4px solid rgb(0, 0, 0);
-                    margin: 30px;
-                    text-align: center;
-                    line-height: 37px;
-                    background-color: rgb(0, 0, 0);
-                    color: white;
+                    @include basic (55vh, 55vh, 30px, auto, 4px solid nth($colores , 4 ), auto);
+                    background-color: nth($colores , 4 );
+                    color: nth($colores , 5 );
                     letter-spacing: 2px;
                     flex-direction: column;
                     justify-content: space-between;
@@ -283,24 +259,22 @@ main
                     {
                         width:100% ;
                         height:70% ;
-                        border-bottom: 4px solid black;
+                        border-bottom: 4px solid nth($colores , 4 );
                     }
-                    a 
+                    a /*Boton productos*/
                     {
-                        text-decoration: none;
-                        background-color: rgb(250, 166, 50);
-                        color: black;
-                        padding-left: 5px;
-                        padding-right: 5px;
-                        border: 2px solid rgb(0, 0, 0);
-                        border: 3px solid rgba(56, 56, 56, 0.882);
-                        transition: 0.3s;
-                        margin-bottom: 10px;
-                        &:hover/*Hover boton ofertas*/
+                        text-decoration: map-get($botonCajasAnchas , decoracion );
+                        background-color: map-get($botonCajasAnchas , bg-color );
+                        color: map-get($botonCajasAnchas , color );
+                        padding: map-get($botonCajasAnchas , padding ); 
+                        border: map-get($botonCajasAnchas , border );
+                        transition: map-get($botonCajasAnchas , transition );
+                        margin-bottom: map-get($botonCajasAnchas , margin-bottom );
+                        &:hover/*Hover Boton productos*/
                         {
                             transform: scale(1.05);
-                            background-color: rgb(255, 136, 0);
-                            border: 3px solid rgba(47, 47, 47, 0.882);
+                            background-color: nth($colores , 3 );
+                            border: 3px solid nth($colores , 2 );
                         }
                     }
                 }
@@ -309,36 +283,26 @@ main
     }
     .categoriasProductos /*Texto categorias*/
     {
-        text-align: center;
+        @extend %flex;
         h2 /*Titulo categorias*/
         {
             margin-top: 25px;
-            color: black;
-            background-color:  rgb(250, 166, 50);
+            color: nth($colores , 4 );
+            background-color:  nth($colores , 1 );
             padding: 4px;
         }
         div  /*Disposicion categorias productos*/
         {
-            display:inline-block;
-            margin: 20px;
-            margin-left: 40px;
-            margin-right: 40px;
+            @include basic (auto, auto, 10px, 5px, 4px solid nth($colores , 1 ), auto);
             transition: 0.3s;
-            width: auto;
-            height: auto;
-            border: 4px solid rgb(250, 166, 50);
-            margin: 10px;
-            text-align: center;
-            line-height: 37px;
-            background-color: rgba(250, 167, 50, 0.829);
-            display:inline-block;
-            color: black;
+            text-align: center; 
+            background-color: nth($colores , 1 );
+            color: nth($colores , 4 );
             letter-spacing: 2px;
-            padding: 5px;
-            a /*enlaces categorias productos*/
+            a /*Botones categorias productos*/
             {
                 text-decoration: none;
-                color: black;
+                color: nth($colores , 4 );
                 font-size: 20px;
                 font-weight: 900; 
                 font-style:normal;
@@ -349,8 +313,8 @@ main
             }
             &:hover /*Hover enlaces categorias productos*/
             {
-                background-color: rgb(255, 136, 0);
-                border: 4px solid rgba(0, 0, 0, 0.882);
+                background-color: nth($colores , 3 );
+                border: 4px solid nth($colores , 4 );
             }
             h3 /*Nombre caegorias productos*/
             {
@@ -369,33 +333,25 @@ main
     {
         div /*pagina servicios*/
         {
-            display: flex;
-            flex-wrap: wrap;
-            text-align: center;
-            justify-content: center;
+            @extend %flex;
             div /*Box servicios*/
             {
-                width: 35vh;
-                height: auto;
-                border: 4px solid black;
-                margin: 30px;
-                line-height: 37px;
-                background-color:  rgb(250, 166, 50);
-                color: black;
+                @include basic (35vh, auto, 30px, 10px, 4px solid nth($colores , 4 ), auto);
+                background-color:  nth($colores , 1 );
+                color: nth($colores , 4 );
                 letter-spacing: 2px;
-                padding: 10px;
                 transition: 0.3s;
                 &:hover /*Hover enlaces categorias productos*/
                 {
-                    background-color: rgb(255, 136, 0);
-                    border: 4px solid rgba(0, 0, 0, 0.882);
+                    background-color: nth($colores , 3 );
+                    border: 4px solid nth($colores , 4 );
                     transform: scale(1.03);
                 }
             }
             a /*Enlaces categorias servicio*/
             {
                 text-decoration: none;
-                color: black;
+                color: nth($colores , 4 );
                 font-size: 20px;
                 font-weight: 700px; 
                 font-style:normal;
@@ -441,7 +397,7 @@ main
             width: 40vh;
             height: 30vh;
             margin: 20px;
-            background-color: rgb(0, 0, 0);
+            background-color: nth($colores , 4 );
             padding: 5px;
         }
     }
@@ -453,7 +409,7 @@ main
             width: 40vh;
             height: 30vh;
             margin: 20px;
-            background-color: rgb(0, 0, 0);
+            background-color: nth($colores , 4 );
             padding: 5px;
         }
     }
@@ -465,7 +421,7 @@ main
             width: 40vh;
             height: 30vh;
             margin: 20px;
-            background-color: rgb(0, 0, 0);
+            background-color: nth($colores , 4 );
             padding: 5px;
         }
     }
@@ -477,7 +433,7 @@ main
             width: 40vh;
             height: 30vh;
             margin: 20px;
-            background-color: rgb(0, 0, 0);
+            background-color: nth($colores , 4 );
             padding: 5px;
         }
     }
@@ -487,7 +443,7 @@ main
         {
             img /*Ajustes logo nosotros*/
             {
-                background-color: rgb(250, 166, 50);
+                background-color: nth($colores , 1 );
                 border-radius: 100%;
                 padding: 3px;
             }
