--- a/SCSS/base/_mediaQueries.scss
+++ b/SCSS/base/_mediaQueries.scss
@@ -23,7 +23,7 @@
 
 @media screen and (max-width:770px) /*Esconder boton fixed en pantallas mas pequenas*/
 {
-    main
+    footer
     {
         .botonFixed
         {
