--- a/CSS/style.css
+++ b/CSS/style.css
@@ -439,7 +439,11 @@ footer {
     width: 65px;
     height: 65px;
     margin-right: -5px;
-    margin-left: 15px; }
+    margin-left: 15px;
+    transition: all 400ms ease;
+    cursor: pointer; }
+    footer .redes img:hover {
+      transform: translateY(-5%); }
   footer .footerUL li {
     transition: 0.3s; }
     footer .footerUL li a {
